# Image2Gcode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _BugList.txt  common.cpp  common.hpp  config.h.in  layer.cpp  layer.hpp  main.cpp  mesh.cpp  mesh.hpp  plasticPoint.cpp  plasticPoint.hpp  print.cpp  print.hpp  slicer.cpp  slicer.hpp  slicer.py  tasklist.txt
resources/: CE3PRO_xyzCalibration_cube.gcode  Untitled.output.gcode  class_structure.drawio
website/: index.html
